# drag-n-hash

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  cross-platform-build.yml
src/: main.rs
